fix: lazy image overflow when loading

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,7 +74,7 @@ body,
   max-width: 100vw;
   min-height: 100vh;
   color: var(--primary-gray-500) ;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* scroll-behavior: smooth; */
 }
 
